// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorInspector ui component test snapshot deal with specific case if  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents  has can resolve  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents has can't resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents record has  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents record has can  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents record has can resolve  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents() has can't resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if allComponents(re) has can't resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if config->allComponents has can't resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if config->allComponents has can'tas can't resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents  has can resolve  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can resolve  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve , don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve field 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve field, do nothing 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve field, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve field, show  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if record allComponents has can't resolve field, show nothing 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component , should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in  file, should hide in inspectogameObr,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in  show component config file, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in , should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in config, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in game show component config file, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in gameObject_inspector_show_component file, should hide in inspector 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in gameObject_inspector_show_component file, should hide in inspector 2`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in gameObject_inspector_show_component file, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in gameObject_inspector_show_component show component config file, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in inspector config file, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in inspector show component config file, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component isn't defined in inspector show config file, should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component should hide in inspector,  config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component should in inspector config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component shouldn't be config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component shouldn't be shown config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component shouldn't be shown i config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot deal with specific case if the component shouldn't be shown in inspector config->allComponents has can't-resolve component, don't show it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot else has currentGameObject 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot else, should show transform component of it 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot if hasn't currentGameObject 1`] = `
<article
  className="inspector-component"
/>
`;

exports[`MainEditorInspector ui component test snapshot if hasn't currentGameObject, show nothing 1`] = `
<article
  className="inspector-component"
/>
`;

exports[`MainEditorInspector ui component test snapshot if the component  1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="40"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot if the component isn't defined in gameObject_inspector_show_component file, should hide in inspector 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="40"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot if the gameObject is camera 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="40"
      />
    </article>
  </article>
</article>
`;

exports[`MainEditorInspector ui component test snapshot test if the gameObject is camera 1`] = `
<article
  className="inspector-component"
>
  <article
    className="transform-component"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        X : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Y : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="0"
      />
    </article>
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Z : 
      </span>
      <input
        className="input-component float-input"
        onChange={[Function]}
        type="text"
        value="40"
      />
    </article>
  </article>
</article>
`;
